# backend

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn_config.py  index.html  mkdocs.yml  pyproject.toml
api/: main.py  settings.py
api/alembic/: env.py
api/alembic/versions/: a0ed32c03ee7_added_users_table.py  a11b4620d1eb_added_users_table.py  eea403b3a0aa_added_users_table.py
api/core/: exceptions.py  security.py  serializers.py
api/core/exceptions/: __init__.py  authentication.py  authorization.py  base.py  cache.py  database.py  (+2 more)
api/crud/: __init__.py  base.py  user.py
api/dependencies/: __init__.py  auth.py  cache.py  database.py  user.py
api/models/: __init__.py  base.py  user.py
api/routers/: login.py  users.py
api/schemas/: __init__.py  auth.py  base.py  logs.py  token.py  user.py
api/utils/: __init__.py  check_logstash_status.py  database.py  init_db.py
cert/server/: README.md
deployment/: index.html
docs/: deployment.md  index.md
docs/project_structure/: alembic.md  core.md  crud.md  dependencies.md  models.md  overview.md  routers.md  schemas.md  utils.md
logstash/: agent.conf  central.conf
project_structure/alembic/: index.html
project_structure/core/: index.html
project_structure/crud/: index.html
project_structure/dependencies/: index.html
project_structure/models/: index.html
project_structure/overview/: index.html
project_structure/routers/: index.html
project_structure/schemas/: index.html
project_structure/utils/: index.html
scripts/: prestart.sh
search/: search_index.json
traefik/: config.yml
(+6 files in other folders)
