[tool.poetry]
name = "caishen-user-api"
version = "0.1.0"
description = "Caishen is the God of Wealth for the Chinese folk religion and Taoism. This is the user-api backend written in python using FastAPI."
authors = ["Leonardo Monteiro <decastromonteiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.23"}
alembic = "^1.6.5"
celery = "^5.1.2"
pytest = "^6.2.4"
psycopg2-binary = "^2.8.5"
email-validator = "^1.1.3"
passlib = {extras = ["bcrypt"], version="^1.7.2"}
python-jose = {extras = ["cryptography"], version="^3.1.0"}
emails = "^0.6"
httpx = "^0.19.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = "^21.7b0"
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest-cov = "^2.11.1"
sqlalchemy2-stubs = "^0.0.2-alpha.13"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["fastapi", "jose", "passlib", "pydantic", "sqlalchemy"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = false
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
disallow_untyped_defs = true
follow_imports = "silent"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
